--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <i class="bi bi-list mobile-nav-toggle d-xl-none" id="sidenav"></i>
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -46,9 +46,10 @@
           <a href="https://github.com/UniqueAjith" class="gitHub"><i class='bx bxl-github'></i></a>
           <a href="https://linkedin.com/in/ajith-n" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://ajith08.medium.com" class="Blogs"><i class='bx bxl-blogger'></i></a>
-          <a class="Blogs">
-            <i id='vCount'></i>
+          <a class="visitor" data-bs-toggle="modal" data-bs-target="#VisitModal">
+            <i class='bx bx-happy-beaming bx-tada'></i>
           </a>
+          
         </div>
       </div>
 
@@ -120,8 +121,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>Here is my knowledge on TechStack: </p>
+          <h2>Skills</h2>        
         </div>
 
         <div class="row skills-content">
@@ -213,20 +213,17 @@
             <div class="resume-item">
               <h4>Government College of Engineering Srirangam</h4>
               <h5>2019-Present</h5>
-              <p><em>studying B.E Computer Science and Engineering</em></p>
-              <p>CGPA 8.4 upto semester 4 </p>
+              <p><em>B.E Computer Science and Engineering</em></p> 
             </div>
             <div class="resume-item">
               <h4> St. Mary’s Higher Secondary School,Pudukkottai.</h4>
               <h5>2018 - 2019</h5>
-              <p><em>Higher Secondary Education(12th)</em></p>
-              <p>Got 68 percentage</p>
+              <p><em>Higher Secondary Certificate</em></p> 
             </div>
             <div class="resume-item">
               <h4> The LA Jayarani Matriculation Higher Secondary School,Pudukkottai.</h4>
               <h5>2016 - 2017</h5>
-              <p><em>Tamilnadu State Board Education(10th)</em></p>
-              <p>Got 96 percentage</p>
+              <p><em>Secondary School Leaving Certificate</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -234,17 +231,17 @@
             <div class="resume-item">
               <h4>GCESCODERZ Club</h4>
               <h5>Present</h5>
-              <p><em>GCE Srirangam has started this Club</em></p>
+              <a href="https://gcescoderz.github.io/"><em>https://gcescoderz.github.io/</em></a>
               <ul>
-                <li>Head of Data Science in his club.</li>
-                <li>Lead 10 members</li>
-                <li>Do some Project and task along with us</li>              
+                <li>Attained as Head of Data Science Team</li>
+                <li>Lead more than 20 members</li>
+                <li>Participated in different collaborative projects</li>              
               </ul>
             </div>
             <div class="resume-item">
               <h4>Quantium Forage Internship</h4>
               <h5>Present</h5>
-              <p><em>Data analyst Internship</em></p>
+              <p><em>Data Analyst Internship</em></p>
               <ul>
                 <li>Done my first task in Quantium</li>
                   <li>project name:Data preparation and customer analytics</li>
@@ -263,7 +260,6 @@
 
         <div class="section-title">
           <h2>Project</h2>
-          <p>Here it my Project, I have Done:</p>
         </div>
 
         <div class="row">
@@ -298,13 +294,17 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>ajithbabu0802@gmail.com</p>
+                <p>
+                  <a href="mailto:ajithbabu0802@gmail.com" style="text-decoration: none;color:#000;">ajithbabu0802@gmail.com</a>
+                </p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 9159674954</p>
+                <p>
+                  <a href="tel:+919159674954" style="text-decoration: none;color:#000;">+91 9159674954</a>
+                </p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31397.195772454656!2d78.8013150699512!3d10.369886726274416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0079c8fdda0caf%3A0x826be84f492fe5f1!2sThiruvalluvar%20Nagar%2C%20Diamond%20Nagar%2C%20Pudukkottai%2C%20Tamil%20Nadu%20622303!5e0!3m2!1sen!2sin!4v1639812194739!5m2!1sen!2sin" width="380" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
@@ -349,6 +349,22 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
+  <div class="modal fade" id="VisitModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="VisitModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h4>Total Visitor: <b id="allVisits"></b></h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -364,17 +380,16 @@
   <script src="assets/js/main.js"></script>
   
   <script>
-    document.addEventListener(
-     'DOMContentLoaded', function () {
-       if (localStorage.getItem('visitCount') === null) {
-         localStorage.setItem('visitCount',1)
-       }else{
-         localStorage.setItem('visitCount', parseInt(localStorage.getItem('visitCount')) + 1)
-       }
-       document.getElementById('vCount').innerHTML = localStorage.getItem('visitCount');
-    } 
-    );
-
+  
+  function visitor() {
+	  fetch('https://api.countapi.xyz/update/UniqueAjith/Portfolio/?amount=1')
+	  .then(res => res.json())
+	  .then(res => {
+      document.getElementsByTagName("body").className = "modal-open";
+      document.getElementById("allVisits").innerHTML = res.value;
+	  })
+  }
+  visitor();
   </script>
 
 </body>
