Certificate Section Added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class='bx bx-list-ul'></i> <span>Resume</span></a></li>
+          <li><a href="#certificate" class="nav-link scrollto"><i class='bx bx-file-blank'></i> <span>
+            Certifications</span></a></li>
           <li><a href="#project" class="nav-link scrollto"><i class='bx bxs-folder'></i> <span>Project</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -105,7 +107,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.E CSE</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Emailone:</strong> <span>ajithbabu0802@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email id:</strong> <span>ajithbabu0802@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -136,9 +138,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Go <i class="val">75%</i></span>
+              <span class="skill">MySQL<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -150,9 +152,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MYSQL <i class="val">55%</i></span>
+              <span class="skill">Golang<i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -193,7 +195,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <p><h2>Resume
+            <a href="assets/img/file/resume.pdf" target="_blank" class="resume-btn-printer" style="float: right;">
+              <i class="bx bx-printer"></i>
+            </a>
+          </h2>
+          </p>
         </div>
 
         <div class="row">
@@ -239,13 +246,19 @@
               </ul>
             </div>
             <div class="resume-item">
+              <h4>iNeuron Internship</h4>
+              <h5>Present</h5>
+              <p><em>Machine Learning Internship</em></p>
+              <ul>
+                <li> The aim is to build a predictive model and find out the sales of each product at a particular store.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Quantium Forage Internship</h4>
               <h5>Present</h5>
               <p><em>Data Analyst Internship</em></p>
               <ul>
-                <li>Done my first task in Quantium</li>
-                  <li>project name:Data preparation and customer analytics</li>
-                <li>Task two is going on</li>
+                <li>Attained Maintained large Dataset and used various Professional statistical techniques to collect, analyse and interpret data.</li>
               </ul>
             </div>
           </div>
@@ -253,6 +266,124 @@
 
       </div>
     </section><!-- End Resume Section -->
+
+    <!-- ======= Portfolio Section ======= -->
+    <section id="certificate" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <p><h3>My Works</h3></p>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-spe">SPECIALIZATION</li>
+              <li data-filter=".filter-aux">AUXILIARY</li>
+              <li data-filter=".filter-event">EVENTS</li>
+              <li data-filter=".filter-badges">BADGES</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-spe">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Python_udemy_certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Python_udemy_certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-spe">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Python_Certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Python_Certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-event">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Github_Workshop.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Github_Workshop.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-spe">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Scipy_Certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Scipy_Certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-aux">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Git_Certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Git_Certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-aux">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Command-line_Certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Command-line_Certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-event">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Aptitude_certificate.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Aptitude_certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-event">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/ineutron_offer_letter.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ineutron_offer_letter.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-event">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/spark_offer_lette.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/spark_offer_lette.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-badges">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/club_badges.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/club_badges.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Section -->
 
     <!-- ======= project Section ======= -->
     <section id="project" class="project">
